[package]
name = "java-scaffold"
version = "0.1.0"
edition = "2021"
authors = ["zoey wang<pumpkiiinnnn@gmail.com>"]
description = "Risk project scaffolder"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"

[dependencies]
clap = "3.0"
dialoguer = "0.11.0"
console = "0.15.0"
